Updated header link from to twitter

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 	<header id="masthead">
-		<h1>I'm <a href="http://scottcormier.com" title="scottcormier.com">Scott Cormier</a>, <span id="tagline">an interface designer</span>.</h1>
+		<h1>I'm <a href="https://twitter.com/scormier" title="@scormier">Scott Cormier</a>, <span id="tagline">an interface designer</span>.</h1>
 		<div class="title">I'm <a href="/">Scott Cormier</a>, <span id="tagline2">an interface designer</span>.</div>
 		<nav>
 			<ul>
