Update links to css, js and images

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<link rel="apple-touch-icon" href="{PortraitURL-128}">
 	<link rel="alternate" type="application/rss+xml" href="{RSS}">
 
-	<link rel="stylesheet" href="/_css/style.css" type="text/css" media="screen" />
-	<script src="/_js/modernizr-2.0.6.js"></script>
+	<link rel="stylesheet" href="_css/style.css" type="text/css" media="screen" />
+	<script src="_js/modernizr-2.0.6.js"></script>
 	<script type="text/javascript" src="http://use.typekit.com/cpr7cwp.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
@@ -40,23 +40,23 @@
                     <div id="project_1" class="images">
                         <ul class="slides">
                             <li>
-                                <a href="/_img/social_hub_insights_1.png" class="img view" rel="project_1">
-            						<img src="/_img/social_hub_insights_1.png" alt="Social Hub Insights" />
+                                <a href="_img/social_hub_insights_1.png" class="img view" rel="project_1">
+            						<img src="_img/social_hub_insights_1.png" alt="Social Hub Insights" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/social_hub_insights_2.png" class="img view" rel="project_1">
-            						<img src="/_img/social_hub_insights_2.png" alt="Social Hub Insights" />
+                                <a href="_img/social_hub_insights_2.png" class="img view" rel="project_1">
+            						<img src="_img/social_hub_insights_2.png" alt="Social Hub Insights" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/social_hub_insights_3.png" class="img view" rel="project_1">
-            						<img src="/_img/social_hub_insights_3.png" alt="Social Hub Insights" />
+                                <a href="_img/social_hub_insights_3.png" class="img view" rel="project_1">
+            						<img src="_img/social_hub_insights_3.png" alt="Social Hub Insights" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/social_hub_insights_4.png" class="img view" rel="project_1">
-            						<img src="/_img/social_hub_insights_4.png" alt="Social Hub Insights" />
+                                <a href="_img/social_hub_insights_4.png" class="img view" rel="project_1">
+            						<img src="_img/social_hub_insights_4.png" alt="Social Hub Insights" />
                                 </a>
                             </li>
                         </ul>
@@ -98,33 +98,33 @@
                     <div id="project_2" class="images">
                         <ul class="slides">
                             <li>
-                                <a href="/_img/fbcm_wizard_1.png" class="img view" rel="project_2">
-            						<img src="/_img/fbcm_wizard_1.png" alt="Facebook Campaign Manager Wizard image" />
+                                <a href="_img/fbcm_wizard_1.png" class="img view" rel="project_2">
+            						<img src="_img/fbcm_wizard_1.png" alt="Facebook Campaign Manager Wizard image" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/fbcm_wizard_2.png" class="img view" rel="project_2">
-            						<img src="/_img/fbcm_wizard_2.png" alt="Facebook Campaign Manager Wizard image" />
+                                <a href="_img/fbcm_wizard_2.png" class="img view" rel="project_2">
+            						<img src="_img/fbcm_wizard_2.png" alt="Facebook Campaign Manager Wizard image" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/fbcm_wizard_3.png" class="img view" rel="project_2">
-            						<img src="/_img/fbcm_wizard_3.png" alt="Facebook Campaign Manager Wizard image" />
+                                <a href="_img/fbcm_wizard_3.png" class="img view" rel="project_2">
+            						<img src="_img/fbcm_wizard_3.png" alt="Facebook Campaign Manager Wizard image" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/fbcm_wizard_4.png" class="img view" rel="project_2">
-            						<img src="/_img/fbcm_wizard_4.png" alt="Facebook Campaign Manager Wizard image" />
+                                <a href="_img/fbcm_wizard_4.png" class="img view" rel="project_2">
+            						<img src="_img/fbcm_wizard_4.png" alt="Facebook Campaign Manager Wizard image" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/fbcm_wizard_5.png" class="img view" rel="project_2">
-            						<img src="/_img/fbcm_wizard_5.png" alt="Facebook Campaign Manager Wizard image" />
+                                <a href="_img/fbcm_wizard_5.png" class="img view" rel="project_2">
+            						<img src="_img/fbcm_wizard_5.png" alt="Facebook Campaign Manager Wizard image" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/fbcm_wizard_6.png" class="img view" rel="project_2">
-            						<img src="/_img/fbcm_wizard_6.png" alt="Facebook Campaign Manager Wizard image" />
+                                <a href="_img/fbcm_wizard_6.png" class="img view" rel="project_2">
+            						<img src="_img/fbcm_wizard_6.png" alt="Facebook Campaign Manager Wizard image" />
                                 </a>
                             </li>
                         </ul>
@@ -167,28 +167,28 @@
                     <div id="project_3" class="images">
                         <ul class="slides">
                             <li>
-                                <a href="/_img/conversation_dashboard_1.png" class="img view" rel="project_3">
-            						<img src="/_img/conversation_dashboard_1.png" alt="Conversation Dashboard" />
+                                <a href="_img/conversation_dashboard_1.png" class="img view" rel="project_3">
+            						<img src="_img/conversation_dashboard_1.png" alt="Conversation Dashboard" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/conversation_dashboard_2.png" class="img view" rel="project_3">
-            						<img src="/_img/conversation_dashboard_2.png" alt="Conversation Dashboard (Maximized)" />
+                                <a href="_img/conversation_dashboard_2.png" class="img view" rel="project_3">
+            						<img src="_img/conversation_dashboard_2.png" alt="Conversation Dashboard (Maximized)" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/conversation_dashboard_3.png" class="img view" rel="project_3">
-            						<img src="/_img/conversation_dashboard_3.png" alt="Conversation Dashboard (Quick Publish)" />
+                                <a href="_img/conversation_dashboard_3.png" class="img view" rel="project_3">
+            						<img src="_img/conversation_dashboard_3.png" alt="Conversation Dashboard (Quick Publish)" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/conversation_dashboard_stream.jpg" class="img view" rel="project_3">
-            						<img src="/_img/conversation_dashboard_stream.jpg" alt="Conversation Dashboard (User Info)" />
+                                <a href="_img/conversation_dashboard_stream.jpg" class="img view" rel="project_3">
+            						<img src="_img/conversation_dashboard_stream.jpg" alt="Conversation Dashboard (User Info)" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/conversation_dashboard_user.jpg" class="img view" rel="project_3">
-            						<img src="/_img/conversation_dashboard_user.jpg" alt="Conversation Dashboard (User Info - Klout)" />
+                                <a href="_img/conversation_dashboard_user.jpg" class="img view" rel="project_3">
+            						<img src="_img/conversation_dashboard_user.jpg" alt="Conversation Dashboard (User Info - Klout)" />
                                 </a>
                             </li>
                         </ul>
@@ -219,23 +219,23 @@
                     <div id="project_4" class="images">
                         <ul class="slides">
                             <li>
-                                <a href="/_img/scottcormier.com_1.png" class="img view" rel="project_4">
-            						<img src="/_img/scottcormier.com_1.png" alt="scottcormier.com Tumblr Theme" />
+                                <a href="_img/scottcormier.com_1.png" class="img view" rel="project_4">
+            						<img src="_img/scottcormier.com_1.png" alt="scottcormier.com Tumblr Theme" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/scottcormier.com_2.png" class="img view" rel="project_4">
-            						<img src="/_img/scottcormier.com_2.png" alt="scottcormier.com Tumblr Theme" />
+                                <a href="_img/scottcormier.com_2.png" class="img view" rel="project_4">
+            						<img src="_img/scottcormier.com_2.png" alt="scottcormier.com Tumblr Theme" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/scottcormier.com_3.png" class="img view" rel="project_4">
-            						<img src="/_img/scottcormier.com_3.png" alt="scottcormier.com Tumblr Theme" />
+                                <a href="_img/scottcormier.com_3.png" class="img view" rel="project_4">
+            						<img src="_img/scottcormier.com_3.png" alt="scottcormier.com Tumblr Theme" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/scottcormier.com_4.png" class="img view" rel="project_4">
-            						<img src="/_img/scottcormier.com_4.png" alt="scottcormier.com Tumblr Theme" />
+                                <a href="_img/scottcormier.com_4.png" class="img view" rel="project_4">
+            						<img src="_img/scottcormier.com_4.png" alt="scottcormier.com Tumblr Theme" />
                                 </a>
                             </li>
                         </ul>
@@ -265,18 +265,18 @@
                     <div id="project_5" class="images">
                         <ul class="slides">
                             <li>
-                                <a href="/_img/kwerk.ca_1.png" class="img view" rel="project_5">
-            						<img src="/_img/kwerk.ca_1.png" alt="kwerk.ca Wordpress Theme" />
+                                <a href="_img/kwerk.ca_1.png" class="img view" rel="project_5">
+            						<img src="_img/kwerk.ca_1.png" alt="kwerk.ca Wordpress Theme" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/kwerk.ca_2.png" class="img view" rel="project_5">
-            						<img src="/_img/kwerk.ca_2.png" alt="kwerk.ca Wordpress Theme" />
+                                <a href="_img/kwerk.ca_2.png" class="img view" rel="project_5">
+            						<img src="_img/kwerk.ca_2.png" alt="kwerk.ca Wordpress Theme" />
                                 </a>
                             </li>
                             <li>
-                                <a href="/_img/kwerk.ca_3.png" class="img view" rel="project_5">
-            						<img src="/_img/kwerk.ca_3.png" alt="kwerk.ca Wordpress Theme" />
+                                <a href="_img/kwerk.ca_3.png" class="img view" rel="project_5">
+            						<img src="_img/kwerk.ca_3.png" alt="kwerk.ca Wordpress Theme" />
                                 </a>
                             </li>
                         </ul>
@@ -320,9 +320,9 @@
     <script type="text/javascript">
         google.load("jquery", "1");
     </script>
-	<script src="/_js/jquery.flexslider-min.js"></script>
-	<script src="/_js/view.min.js?auto"></script>
-	<script src="/_js/script.js"></script>	
+	<script src="_js/jquery.flexslider-min.js"></script>
+	<script src="_js/view.min.js?auto"></script>
+	<script src="_js/script.js"></script>	
 	<!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet 
 	     change the UA-XXXXX-X to be your site's ID -->
 	<script>
