Added resume with some content

--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
 <body>
 	<header id="masthead">
 		<h1>I'm <a href="https://twitter.com/scormier" title="@scormier">Scott Cormier</a>, <span id="tagline">an interface designer</span>.</h1>
-		<div class="title">I'm <a href="/">Scott Cormier</a>, <span id="tagline2">an interface designer</span>.</div>
+		<div class="title">I'm <a href="http://work.scottcormier.com">Scott Cormier</a>, <span id="tagline2">an interface designer</span>.</div>
 		<nav>
 			<ul>
-				<li><a href="http://scottcormier.com" title="Home">Home</a></li>
-				<li><a href="http://scottcormier.com/ask" title="Ask me a question">Ask a Question</a></li>
-                <li><a href="http://work.scottcormier.com">Work</a></li>
-				<li><a href="http://scottcormier.com/about" title="About">About</a></li>
+				<li><a href="http://localhost:8888/work.scottcormier.com/" title="Work">Work</a></li>
+				<li><a href="http://localhost:8888/work.scottcormier.com/cv.html" title="Resume">Resume</a></li>
+                <li><a href="http://twitter.com/scormier" target="_blank" title="Follow me on Twitter">Twitter</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -44,6 +43,7 @@
 		<div id="main">
 			<div class="wrapper">
                 <p class="intro">Although this site is mobile optimized, I'd recommend viewing it on a PC for the best experience.</p>
+                
                 <article>
                     <div id="project_7" class="images">
                         <ul class="slides">
