Updated copy and styling of cv.html

--- a/cv.html
+++ b/cv.html
@@ -4,37 +4,37 @@
 <!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>scottcormier.com - Portfolio</title>
-    <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>scottcormier.com - Portfolio</title>
+  <meta name="author" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <link rel="shortcut icon" href="{Favicon}">
-    <link rel="apple-touch-icon" href="{PortraitURL-128}">
-    <link rel="alternate" type="application/rss+xml" href="{RSS}">
+  <link rel="shortcut icon" href="{Favicon}">
+  <link rel="apple-touch-icon" href="{PortraitURL-128}">
+  <link rel="alternate" type="application/rss+xml" href="{RSS}">
 
-    <link rel="stylesheet" href="_css/style.css" type="text/css" media="screen" />
-    <script src="_js/modernizr-2.0.6.js"></script>
-    <script type="text/javascript">
-      (function() {
-        var config = {
-          kitId: 'cpr7cwp',
-          scriptTimeout: 3000
-        };
-        var h=document.getElementsByTagName("html")[0];h.className+=" wf-loading";var t=setTimeout(function(){h.className=h.className.replace(/(\s|^)wf-loading(\s|$)/g," ");h.className+=" wf-inactive"},config.scriptTimeout);var tk=document.createElement("script"),d=false;tk.src='//use.typekit.net/'+config.kitId+'.js';tk.type="text/javascript";tk.async="true";tk.onload=tk.onreadystatechange=function(){var a=this.readyState;if(d||a&&a!="complete"&&a!="loaded")return;d=true;clearTimeout(t);try{Typekit.load(config)}catch(b){}};var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(tk,s)
-      })();
-    </script>
+  <link rel="stylesheet" href="_css/style.css" type="text/css" media="screen" />
+  <script src="_js/modernizr-2.0.6.js"></script>
+  <script type="text/javascript">
+    (function() {
+      var config = {
+        kitId: 'cpr7cwp',
+        scriptTimeout: 3000
+      };
+      var h=document.getElementsByTagName("html")[0];h.className+=" wf-loading";var t=setTimeout(function(){h.className=h.className.replace(/(\s|^)wf-loading(\s|$)/g," ");h.className+=" wf-inactive"},config.scriptTimeout);var tk=document.createElement("script"),d=false;tk.src='//use.typekit.net/'+config.kitId+'.js';tk.type="text/javascript";tk.async="true";tk.onload=tk.onreadystatechange=function(){var a=this.readyState;if(d||a&&a!="complete"&&a!="loaded")return;d=true;clearTimeout(t);try{Typekit.load(config)}catch(b){}};var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(tk,s)
+    })();
+  </script>
 </head>
 <body>
   <header id="masthead">
-    <h1>I'm <a href="https://twitter.com/scormier" title="@scormier">Scott Cormier</a>, <span id="tagline">an interface designer</span>.</h1>
+    <h1>I'm <a href="https://twitter.com/scormier" title="@scormier">Scott Cormier</a>, <span id="tagline">a UX &amp; Product designer</span>.</h1>
     <div class="title">I'm <a href="http://work.scottcormier.com">Scott Cormier</a>, <span id="tagline2">an interface designer</span>.</div>
     <nav>
       <ul>
-        <li><a href="http://work.scottcormier.com" title="Home">Home</a></li>
-        <li class="active"><a href="/cv" title="Resume">Resume</a></li>
+        <li><a href="/stage/" title="Work">Work</a></li>
+        <li class="active"><a href="/stage/cv" title="Resume">Resume</a></li>
         <li><a href="http://twitter.com/scormier" target="_blank" title="Follow me on Twitter">Twitter</a></li>
       </ul>
     </nav>
@@ -44,75 +44,105 @@
       <div class="wrapper">
         <p class="intro">Although this site is mobile optimized, I'd recommend viewing it on a PC for the best experience.</p>
         <article class="cv">
-          Scott Cormier
-          <br>
-          <a href="mailto:scottcormier@gmail.com?subject=Resume" "scottcormier@gmail.com">scottcormier@gmail.com</a>
-          <br>
-          <a href="tel:+14164000499">+1 (416) 400-0499</a>
+          <div class="contact-info">
+            <h2>Contact</h2>
+            <ul>
+              <li>
+                <a href="mailto:scottcormier@gmail.com?subject=Resume" "scottcormier@gmail.com">scottcormier@gmail.com</a>
+              </li>
+              <li>
+                <a href="tel:+14164000499">+1 (416) 400-0499</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h2>Download</h2>
+            <ul>
+              <li>
+                <a href="http://work.scottcormier.com/scott_cormier_-_resume.pdf" title="Download my resume - PDF">PDF</a>
+              </li>
+              <li>
+                <a href="ca.linkedin.com/in/scottcormier/" target="_blank" title="LinkedIn profile">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
         </article>
         <article class="cv">
           <h2 class="cv">Overview</h2>
-          <p class="summary">I’m a UX and product designer living in Toronto, Canada. Currently, I'm the ux and product lead for Mobile at <a href="http://waveapps.com/" target="_blank">Wave</a>. Previously I was the lead ux &amp; product designer at <a href="http://awarenessnetworks.com/" target="_blank" title="Awareness">Awareness</a>, an enterprise social media platform, where I worked with clients like <a href="http://mlb.com" target="_blank" title="mlb.com">MLB.com</a>, <a href="http://sony.com" target="_blank" title="sony.com">Sony</a>, and <a href="http://weightwatchers.com" target="_blank" title="weightwatchers.com">Weight Watchers</a>. I’m passionate about design, the intersection of technology and society, and products that make a positive, lasting impact.</p>
+          <p>I’m a UX and Product Designer living in Toronto, Canada. Currently, I'm the UX and Product Manager for Mobile at <a href="http://waveapps.com/" target="_blank">Wave</a>. I’m passionate about design, the intersection of technology and society, and products that make a positive, lasting impact.</p>
         </article>
         <article class="cv">
-          <div>
-              <h2 class="cv">Experience</h2>
-              <h3>UX &amp; Product designer | <a href="http://waveapps.com" title="Wave">Wave</a> - Mobile</h3>
-              <em>July 2012 - Present</em>
-              <br>
-              <p>Leading the design, ux and implementation of all mobile apps at Wave.</p>
-              <ul>
-                <li>Requirents gathering (business &amp; user)</li>
-                <li>Wireframing, protyping and visual design</li>
-                <li>Product and development management</li>
-              </ul>
-          </div>
-          <div>
-              <h3>UX &amp; UI designer | <a href="http://waveapps.com" title="Wave">Wave</a> - Payroll</h3>
-              <em>February 2012 - July 2012</em>
-              <br>
-              <p>Led design and front-end implementation for the Payroll by Wave web app.</p>
-              <ul>
-                <li>Requirents gathering (business &amp; user)</li>
-                <li>Wireframing, protyping and visual design</li>
-                <li>Product and development management</li>
-              </ul>              
-          </div>
-          <div>
-              <h3>UX &amp; Product designer | <a href="http://awarenessnetworks.com" title="Awareness">Awareness</a></h3>
-              <em>July 2008 - January 2012</em>
-              <br>
-              <p>Led design and front-end implementation for the Payroll by Wave web app.</p>
-              <ul>
-                <li>Requirents gathering (business &amp; user)</li>
-                <li>Wireframing, protyping and visual design</li>
-                <li>Product and development management</li>
-              </ul>              
-          </div>
+          <h2>Skills</h2>
+          <h3>Expertise:</h3>
+          <p>Product Design, Product Strategy, User Experience, Interaction Design, Interface Design, Mobile & Web Apps, Usability</p>
+          <h3>Methods:</h3>
+          <p>User Research, Design Leadership, Flow Diagrams, Personas, Wireframes, Prototypes, Usability Testing</p>
+          <h3>Tools:</h3>
+          <p>Sketching, Photoshop/Sketch, Illustrator, OmniGraffle, HTML5, CSS3, JavaScript</p>
         </article>
-        <article class="contact">
-            <!-- Begin MailChimp Signup Form -->
-            <div id="mc_embed_signup">
-                <form action="http://kwerk.us4.list-manage1.com/subscribe/post?u=8c1ae85d386c00a242bdc8690&amp;id=bf645f64a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <div class="title">
-                        <h2>Questions?</h2>
-                    </div>
-                    <div class="mc-field-group">
-                        <input type="email" value="" placeholder="email" name="EMAIL" class="required email" id="mce-EMAIL">
-                    </div>
-                    <div class="mc-field-group">
-                        <textarea type="text" value="" placeholder="message..." name="MMERGE3" class="required" id="mce-MMERGE3"></textarea>
-                    </div>
-                    <div id="mce-responses" class="clear">
-                        <div class="response" id="mce-error-response" style="display:none"></div>
-                        <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>
-                    <div class="clear">
-                        <input type="submit" value="Contact me" name="subscribe" id="mc-embedded-subscribe" class="button">
-                    </div>
-                </form>
-            </div>
-            <!--End mc_embed_signup-->                    
+        <article class="cv">
+          <h2>Experience</h2>
+          <section>
+            <h3>UX &amp; Product designer | <a href="http://waveapps.com" title="Wave">Wave</a> - Mobile</h3>
+            <p><em>July 2012 - Present</em></p>
+            <p>Leading the design, ux and implementation of all mobile apps at Wave.</p>
+            <p>Since establishing the mobile team at Wave, I've acted as the Product Manager of all mobile products. I'm responsiblie for the requirements gathering (market & user research), wireframing, prototyping, visual design, dev management and product marketing for all of our mobile apps (iOS and Android).</p>
+            <p>In 18 months we've released Payroll by Wave (5 star rating), Receipts by Wave (4 star rating with multiple features in the Apple App Store), and Payments by Wave (in beta).</p>
+            <p>For a more detailed look into some of these apps, please check out my <a href="http://work.scottcormier.com" title="Portfolio">portfolio</a>.
+          </section>
+          <section>
+            <h3>UX &amp; UI designer | <a href="http://waveapps.com" title="Wave">Wave</a> - Payroll</h3>
+            <p><em>February 2012 - July 2012</em></p>
+            <p>Led design and front-end implementation for the Payroll by Wave web app.</p>
+            <ul class="styled">
+              <li>Requirents gathering (business &amp; user)</li>
+              <li>Wireframing, protyping and visual design</li>
+              <li>Product and development management</li>
+            </ul>              
+          </section>
+          <section>
+            <h3>UX &amp; Product designer | <a href="http://awarenessnetworks.com" title="Awareness">Awareness</a></h3>
+            <p><em>July 2008 - January 2012</em></p>
+            <p>Led design and front-end implementation for the Payroll by Wave web app.</p>
+            <ul class="styled">
+              <li>Requirents gathering (business &amp; user)</li>
+              <li>Wireframing, protyping and visual design</li>
+              <li>Product and development management</li>
+            </ul>              
+          </section>
+        </article>
+        <article class="cv">
+          <h2>Education</h2>
+          <section>
+            <h3><a href="http://www.senecac.on.ca/" title="Seneca College">Seneca College</a>, Computer programming</h3>
+            <p><em>September 2005 - July 2007</em></p>
+          </section>
+          <section>
+            <h3><a href="http://uwaterloo.ca/" title="University of Waterloo">University of Waterloo</a>, B.Sc. (Biology)</h3>
+            <p><em>September 1998 - December 2002</em></p>
+          </section>
+        </article>
+        <article class="contact cv">
+          <!-- Begin MailChimp Signup Form -->
+          <div id="mc_embed_signup">
+            <form action="http://kwerk.us4.list-manage1.com/subscribe/post?u=8c1ae85d386c00a242bdc8690&amp;id=bf645f64a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <h2>Questions?</h2>
+                <div class="mc-field-group">
+                    <input type="email" value="" placeholder="email" name="EMAIL" class="required email" id="mce-EMAIL">
+                </div>
+                <div class="mc-field-group">
+                    <textarea type="text" value="" placeholder="message..." name="MMERGE3" class="required" id="mce-MMERGE3"></textarea>
+                </div>
+                <div id="mce-responses" class="clear">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>
+                <div class="clear">
+                    <input type="submit" value="Contact me" name="subscribe" id="mc-embedded-subscribe" class="button">
+                </div>
+            </form>
+          </div>
+          <!--End mc_embed_signup-->                    
         </article>
       </div>
     </div>
@@ -126,18 +156,68 @@
   <script type="text/javascript">
     google.load("jquery", "1");
   </script>
-  <script src="_js/script.js"></script> 
+  <script src="_js/script.js"></script>
+  <script>
+    /*!
+    * FitText.js 1.1
+    *
+    * Copyright 2011, Dave Rupert http://daverupert.com
+    * Released under the WTFPL license
+    * http://sam.zoy.org/wtfpl/
+    *
+    * Date: Thu May 05 14:23:00 2011 -0600
+    */
+
+    (function( $ ){
+
+    $.fn.fitText = function( kompressor, options ) {
+
+      // Setup options
+      var compressor = kompressor || 1,
+          settings = $.extend({
+            'minFontSize' : Number.NEGATIVE_INFINITY,
+            'maxFontSize' : Number.POSITIVE_INFINITY
+          }, options);
+
+      return this.each(function(){
+
+        // Store the object
+        var $this = $(this);
+
+        // Resizer() resizes items based on the object width divided by the compressor * 10
+        var resizer = function () {
+          $this.css('font-size', Math.max(Math.min($this.width() / (compressor*10), parseFloat(settings.maxFontSize)), parseFloat(settings.minFontSize)));
+        };
+
+        // Call once to set.
+        resizer();
+
+        // Call on resize. Opera debounces their resize by default.
+        $(window).on('resize orientationchange', resizer);
+
+      });
+
+    };
+
+    })( jQuery );
+  </script>
   <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet 
        change the UA-XXXXX-X to be your site's ID -->
   <script>
-    var _gaq = [['_setAccount', '{text:Google Analytics UA Code}'], ['_trackPageview']];
-    (function(d, t) {
-      var g = d.createElement(t),
-          s = d.getElementsByTagName(t)[0];
-      g.async = true;
-      g.src = ('https:' == location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      s.parentNode.insertBefore(g, s);
-    })(document, 'script');
-  </script>
+    (function(window, document, variableName, scriptElement, firstScript) {
+      window['GoogleAnalyticsObject'] = variableName;
+      window[variableName] || (window[variableName] = function() {
+        (window[variableName].q = window[variableName].q || []).push(arguments)
+      });
+      window[variableName].l = +new Date;
+      scriptElement = document.createElement('script'),
+      firstScript = document.scripts[0];
+      scriptElement.src = '//www.google-analytics.com/analytics.js';
+      firstScript.parentNode.insertBefore(scriptElement, firstScript)
+    }(window, document, 'ga'));
+
+    ga('create', 'UA-26312391-2');
+    ga('send', 'pageview');
+</script>
 </body>
 </html>
