--- a/cv.html
+++ b/cv.html
@@ -29,11 +29,11 @@
 </head>
 <body>
   <header id="masthead">
-    <h1>I'm <a href="https://twitter.com/scormier" title="@scormier">Scott Cormier</a>, <span id="tagline">a UX &amp; Product designer</span>.</h1>
-    <div class="title">I'm <a href="http://work.scottcormier.com">Scott Cormier</a>, <span id="tagline2">an interface designer</span>.</div>
+    <h1>I'm <a href="http://work.scottcormier.com" title="work.scottcormier.com">Scott Cormier</a>, <span id="tagline">a UX &amp; Product designer</span></h1>
+    <div class="title">I'm <a href="work.scottcormier.com">Scott Cormier</a>, <span id="tagline2">an interface designer</span></div>
     <nav>
       <ul>
-        <li><a href="/stage/" title="Work">Work</a></li>
+        <li><a href="/" title="Work">Work</a></li>
         <li class="active"><a href="/stage/cv" title="Resume">Resume</a></li>
         <li><a href="http://twitter.com/scormier" target="_blank" title="Follow me on Twitter">Twitter</a></li>
       </ul>
@@ -62,23 +62,23 @@
                 <a href="http://work.scottcormier.com/scott_cormier_-_resume.pdf" title="Download my resume - PDF">PDF</a>
               </li>
               <li>
-                <a href="ca.linkedin.com/in/scottcormier/" target="_blank" title="LinkedIn profile">LinkedIn</a>
+                <a href="http://ca.linkedin.com/in/scottcormier/" target="_blank" title="LinkedIn profile">LinkedIn</a>
               </li>
             </ul>
           </div>
         </article>
         <article class="cv">
           <h2 class="cv">Overview</h2>
-          <p>I’m a UX and Product Designer living in Toronto, Canada. Currently, I'm the UX and Product Manager for Mobile at <a href="http://waveapps.com/" target="_blank">Wave</a>. I’m passionate about design, the intersection of technology and society, and products that make a positive, lasting impact.</p>
+          <p>UX and Product Designer with 7+ years experience creating functional and innovative mobile and web apps. Currently, the Product Manager of Mobile at <a href="http://waveapps.com/" target="_blank">Wave</a>. I’m passionate about design, the intersection of technology and society, and products that make a positive, lasting impact.</p>
         </article>
         <article class="cv">
           <h2>Skills</h2>
           <h3>Expertise:</h3>
-          <p>Product Design, Product Strategy, User Experience, Interaction Design, Interface Design, Mobile & Web Apps, Usability</p>
+          <p>Product Design, Product Strategy, User Experience, Interaction Design, Interface Design, Usability</p>
           <h3>Methods:</h3>
-          <p>User Research, Design Leadership, Flow Diagrams, Personas, Wireframes, Prototypes, Usability Testing</p>
+          <p>User Research, Design Leadership, Wireframes, Personas, Prototypes, Usability Testing</p>
           <h3>Tools:</h3>
-          <p>Sketching, Photoshop/Sketch, Illustrator, OmniGraffle, HTML5, CSS3, JavaScript</p>
+          <p>Sketching, Illustrator, Photoshop, OmniGraffle, HTML5/CSS3, JavaScript</p>
         </article>
         <article class="cv">
           <h2>Experience</h2>
@@ -86,28 +86,28 @@
             <h3>UX &amp; Product designer | <a href="http://waveapps.com" title="Wave">Wave</a> - Mobile</h3>
             <p><em>July 2012 - Present</em></p>
             <p>Leading the design, ux and implementation of all mobile apps at Wave.</p>
-            <p>Since establishing the mobile team at Wave, I've acted as the Product Manager of all mobile products. I'm responsiblie for the requirements gathering (market & user research), wireframing, prototyping, visual design, dev management and product marketing for all of our mobile apps (iOS and Android).</p>
-            <p>In 18 months we've released Payroll by Wave (5 star rating), Receipts by Wave (4 star rating with multiple features in the Apple App Store), and Payments by Wave (in beta).</p>
+            <p>After establishing the mobile team at Wave, I've acted as the Product Manager of all mobile products. I'm responsible for the requirements gathering (market & user research), wireframing, prototyping, visual design, dev management, usability testing and product marketing for all of our mobile apps (iOS and Android).</p>
+            <p>I've designed and shipped Payroll by Wave (5 star rating), Receipts by Wave (4.5 star rating with multiple features in the Apple App Store), and Payments by Wave (in beta).</p>
             <p>For a more detailed look into some of these apps, please check out my <a href="http://work.scottcormier.com" title="Portfolio">portfolio</a>.
           </section>
           <section>
             <h3>UX &amp; UI designer | <a href="http://waveapps.com" title="Wave">Wave</a> - Payroll</h3>
             <p><em>February 2012 - July 2012</em></p>
-            <p>Led design and front-end implementation for the Payroll by Wave web app.</p>
+            <p>Led product and ux design, as well as the front-end implementation for the Payroll by Wave web app.</p>
             <ul class="styled">
               <li>Requirents gathering (business &amp; user)</li>
               <li>Wireframing, protyping and visual design</li>
-              <li>Product and development management</li>
+              <li>Front-end implementation (HTML5, CSS, JS)</li>
             </ul>              
           </section>
           <section>
             <h3>UX &amp; Product designer | <a href="http://awarenessnetworks.com" title="Awareness">Awareness</a></h3>
             <p><em>July 2008 - January 2012</em></p>
-            <p>Led design and front-end implementation for the Payroll by Wave web app.</p>
+            <p>Acted as the lead product designer and front-end developer for all Awareness products, including the Conversation Dashboard, Social Insights Hub, and the Awareness Campaign Manager.</p>
             <ul class="styled">
               <li>Requirents gathering (business &amp; user)</li>
               <li>Wireframing, protyping and visual design</li>
-              <li>Product and development management</li>
+              <li>Front-end implementation (HTML5, CSS, JS)</li>
             </ul>              
           </section>
         </article>
